source/components/Tables/ReportTables/ReportOrdersTable/styles.m.css
.table {
    background-color: white;
    min-width: 0 !important;
}

.table :global(.ant-table-header) {
    text-transform: uppercase;
    min-width: 0 !important; /*IMPORTANT it solves antd table issue when scrolling is added*/
    font-size: 0.8em;
    font-style: bold;
}

.table :global(.ant-pagination) {
    float: none;
    justify-content: center;
    display: flex;
}

.paper {
    overflow: initial;
    min-height: 360px;
    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px,
        rgba(0, 0, 0, 0.23) 0px 3px 10px;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-sizing: border-box;
    background-color: rgb(255, 255, 255);
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.filterColumnHeaderWrap{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 95px;
    width: 100%;
}

.filterColumnText {
    text-transform: lowercase;
    color: rgba(0, 0, 0, 0.5);
    align-self: flex-start;
}

.statusDropdown {
    width: 100%;
}

.clientName {
    color: #001529;
}

.clientVehicle {
    color: var(--text4);
}

.clientPhone {
    color: var(--link);
}

.storageDateFilter {
    display: flex;
    justify-content: space-around;

}

.clearIconCont {
    display: flex;
    align-items: center;
    height: 100%;
}

.clearIcon {
    background-color: rgba(155, 89, 182, .5);
    border-radius: 100%;
    font-size: 16px;
}

.filterButton {
    background-color: #9b59b6;
    font-weight: bolder;
}

